--- a/src/app/conoce/conoce.page.html
+++ b/src/app/conoce/conoce.page.html
@@ -47,6 +47,6 @@
     - Ing. Diego Quisi Msc.
   </h5>
   <h5 id="conoceMS-heading4" style="color:#000000;">
-    - Frank Montalvo
+    - Frank Montalvo Ochoa
   </h5>
 </ion-content>
