--- a/src/app/descripcion/descripcion.page.html
+++ b/src/app/descripcion/descripcion.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <div style="display: flex;">
-    <ion-title> <h2>{{modalTitle}}</h2></ion-title>
-    <ion-button shape="round" fill="outline" size="small" (click)="closeModal()" color="dark">
-      Cerrar
-      <ion-icon slot="end" name="exit"></ion-icon>
-    </ion-button>
-  </div>
+      <ion-label text-wrap style="text-align: justify;">
+        {{modalTitle}}
+      </ion-label>
+      <ion-button shape="round" fill="outline" size="small" (click)="closeModal()" color="dark" style="float: right;">
+        Cerrar
+        <ion-icon slot="end" name="close"></ion-icon>
+      </ion-button>
   </ion-toolbar>
 </ion-header>
 <ion-content>
