--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -4,6 +4,9 @@
     <ion-buttons slot="start">
       <ion-menu-button autoHide="false"></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <img src="../../assets/icon/ups.png">
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
