--- a/src/app/proyecto/proyecto.page.html
+++ b/src/app/proyecto/proyecto.page.html
@@ -1,8 +1,11 @@
 <ion-header>
     <ion-toolbar color="primary">
-        <ion-title>Proyectos de {{nombre}}</ion-title>
+        <ion-label text-wrap style="text-align: justify;">Proyectos de {{nombre}}</ion-label>
         <ion-buttons slot="start">
             <ion-menu-button autoHide="false"></ion-menu-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <img src="../../assets/icon/ups.png">
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
@@ -10,11 +13,11 @@
     <ion-list>
         <ion-item-sliding *ngFor="let l of lista">
             <ion-item lines="inset">
-                <ion-label>
-                    id: {{l.id}}<br>
-                    nombre: {{l.nombre}}<br>
-                    carrera: {{l.carrera}}<br>
-                    participantes: {{l.participantes}}<br>
+                <ion-avatar slot="start">
+                    <img src="../../assets/icon/project.png">
+                </ion-avatar>
+                <ion-label text-wrap style="text-align: justify;">
+                    <h2><strong>{{l.nombre}}</strong></h2><br>
                 </ion-label>
             </ion-item>
         </ion-item-sliding>
